Updated portfolio with Flask Redis App

--- a/index.html
+++ b/index.html
@@ -5,16 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My DevOps Portfolio</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 50px; }
+        body { 
+            font-family: Arial, sans-serif; 
+            text-align: center; 
+            margin: 20px;
+        }
         h1 { color: #007bff; }
-        a { color: #28a745; text-decoration: none; font-weight: bold; }
+        a { 
+            color: #28a745; 
+            text-decoration: none; 
+            font-weight: bold; 
+        }
+        .project {
+            border: 1px solid #ddd;
+            padding: 15px;
+            margin: 10px auto;
+            width: 50%;
+            background: #f9f9f9;
+            border-radius: 8px;
+        }
     </style>
 </head>
 <body>
     <h1>Welcome to My DevOps Portfolio 🚀</h1>
     <p>Hi, I'm <strong>Aishwarya Govindkar</strong>, a passionate DevOps Engineer.</p>
     <p>Check out my projects below!</p>
-    <a href="https://github.com/aishugovindkar">View My GitHub</a>
+
+    <h2>Projects</h2>
+
+    <div class="project">
+        <h3>Flask Redis App</h3>
+        <p>A simple Flask application integrated with Redis for caching.</p>
+        <a href="https://github.com/aishugovindkarpro8/flask-redis-app" target="_blank">🔗 View on GitHub</a>
+    </div>
+
+    <p><a href="https://github.com/aishugovindkar" target="_blank">View My GitHub Profile</a></p>
 </body>
 </html>
-
